--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@anypoint-web-components/validatable-mixin",
   "description": "A mixin to implement user input validation in a LitElement component",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "Apache-2.0",
   "main": "validatable-mixin.js",
   "keywords": [
@@ -27,45 +27,47 @@
     "url": "https://github.com/anypoint-web-components/validatable-mixin/issues",
     "email": "arc@mulesoft.com"
   },
+  "dependencies": {
+    "@polymer/iron-meta": "^3.0.1"
+  },
+  "devDependencies": {
+    "@advanced-rest-client/arc-demo-helper": "^1.0.7",
+    "@advanced-rest-client/eslint-config": "^1.0.6",
+    "@advanced-rest-client/prettier-config": "^0.1.0",
+    "@advanced-rest-client/testing-karma-sl": "^1.0.2",
+    "@anypoint-web-components/validator-mixin": "^1.0.0",
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^7.0.0",
+    "@open-wc/testing": "^2.2.1",
+    "@open-wc/testing-karma": "^3.1.5",
+    "deepmerge": "^4.0.0",
+    "es-dev-server": "^1.8.3",
+    "husky": "^1.0.0",
+    "karma": "^4.2.0",
+    "lint-staged": "^8.0.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.1"
+  },
   "scripts": {
-    "start": "owc-dev-server --open demo",
     "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:legacy": "karma start --legacy --coverage",
-    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
     "update-types": "gen-typescript-declarations --deleteExisting --outDir .",
+    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start:compatibility": "es-dev-server --app-index demo/index.html --compatibility all --node-resolve --open --watch",
     "lint:eslint": "eslint --ext .js,.html .",
     "format:eslint": "eslint --ext .js,.html . --fix",
     "lint:prettier": "prettier \"**/*.js\" --list-different || (echo '↑↑ these files are not prettier formatted ↑↑' && exit 1)",
     "format:prettier": "prettier \"**/*.js\" --write",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier"
-  },
-  "dependencies": {
-    "@polymer/iron-meta": "^3.0.1"
-  },
-  "devDependencies": {
-    "@advanced-rest-client/a11y-suite": "^1.1.0",
-    "@advanced-rest-client/arc-demo-helper": "^1.0.4",
-    "@advanced-rest-client/testing-karma-sl": "^1.0.2",
-    "@anypoint-web-components/validator-mixin": "^1.0.0",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^7.0.0",
-    "@open-wc/eslint-config": "^0.4.1",
-    "@open-wc/prettier-config": "^0.1.0",
-    "@open-wc/testing": "^0.11.1",
-    "@open-wc/testing-karma": "^2.0.16",
-    "husky": "^1.0.0",
-    "lint-staged": "^8.0.0",
-    "lit-element": "^2.0.1",
-    "lit-html": "^1.1.1",
-    "owc-dev-server": "^1.0.0",
-    "webpack-merge": "^4.1.5"
+    "format": "npm run format:eslint && npm run format:prettier",
+    "test:watch": "karma start --auto-watch=true --single-run=false",
+    "test:legacy": "karma start --legacy --coverage",
+    "test:legacy:watch": "karma start --legacy --auto-watch=true --single-run=false",
+    "test:sl": "karma start karma.sl.config.js --legacy --coverage",
+    "generate-model": "node demo/model.js"
   },
   "lint-staged": {
     "*.js": [
-      "eslint --ext .js,.html . --fix",
+      "eslint --fix",
       "git add"
     ]
   }
