--- a/package.json
+++ b/package.json
@@ -32,40 +32,38 @@
     "@open-wc/dedupe-mixin": "^1.3.0"
   },
   "devDependencies": {
-    "@advanced-rest-client/arc-demo-helper": "^2.2.0",
-    "@advanced-rest-client/testing-karma-sl": "^1.4.2",
-    "@open-wc/eslint-config": "^3.0.0",
-    "@open-wc/testing": "^2.5.27",
-    "@open-wc/testing-karma": "^4.0.6",
-    "deepmerge": "^4.2.2",
-    "es-dev-server": "^1.57.5",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.12.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
+    "@advanced-rest-client/arc-demo-helper": "^2.2.6",
+    "@open-wc/eslint-config": "^2.1.0",
+    "@open-wc/testing": "^2.5.32",
+    "@web/dev-server": "^0.1.8",
+    "@web/test-runner": "^0.12.15",
+    "@web/test-runner-playwright": "^0.8.4",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4",
     "lit-element": "^2.4.0",
     "lit-html": "^1.3.0",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.3",
+    "sinon": "^9.2.4",
+    "typescript": "^4.2.2",
     "typescript-lit-html-plugin": "^0.9.0"
   },
   "scripts": {
-    "start": "es-dev-server --app-index demo/index.html --node-resolve --open --watch",
+    "start": "web-dev-server --app-index demo/index.html --node-resolve --open --watch --root-dir .",
     "lint:eslint": "eslint --ext .js,.html . --ignore-path .gitignore",
     "format:eslint": "eslint --ext .js,.html . --fix --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" --check --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" --write --ignore-path .gitignore",
-    "lint": "npm run lint:eslint && npm run lint:prettier",
-    "format": "npm run format:eslint && npm run format:prettier",
-    "test": "karma start --coverage",
-    "test:watch": "karma start --auto-watch=true --single-run=false",
-    "test:sl": "karma start karma.sl.config.js --compatibility auto --coverage"
+    "lint:types": "tsc",
+    "lint": "npm run lint:eslint",
+    "format": "npm run format:eslint",
+    "test": "web-test-runner test/**/*.test.js --coverage --node-resolve --playwright --browsers chromium firefox webkit",
+    "test:watch": "web-test-runner test/**/*.test.js --node-resolve --watch --playwright --browsers chromium"
   },
   "eslintConfig": {
     "extends": [
       "@open-wc/eslint-config",
       "eslint-config-prettier"
     ],
+    "ignorePatterns": "*.d.ts",
     "overrides": [
       {
         "files": [
@@ -80,10 +78,6 @@
         }
       }
     ]
-  },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "always"
   },
   "husky": {
     "hooks": {
